syntax = "proto3";

package foundation.errors;

option go_package = "github.com/ri-nat/foundation/errors";

message InternalError {
}

message UnauthenticatedError {
}

message StaleObjectError {
  string kind = 1;
  string id = 2;
  int32 actual_version = 3;
  int32 expected_version = 4;
}

message NotFoundError {
  string kind = 1;
  string id = 2;
}

message PermissionDeniedError {
  string kind = 1;
  string id = 2;
  string action = 3;
}

message InvalidArgumentError {
  message Violation {
    string field = 1;
    string description = 2;
  }

  string kind = 1;
  string id = 2;

  repeated Violation violations = 3;
}
